# TextEditor

./: CMakeLists.txt  CMakeLists.txt.user.47e265d  CMakeLists.txt.user.7773ee6  LICENSE  README.md  build.sh  cplusplushighlighter.cpp  cplusplushighlighter.h  fileedit.cpp  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  replacedialog.cpp  replacedialog.h  replacedialog.ui  resources.qrc  settingsdialog.h  settingsdialog.ui  toolBarEdit.cpp  utext
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  fileedit.cpp  mainwindow.cpp  resources.qrc  settingsdialog.cpp  settingsdialog.h  toolBarEdit.cpp
images/: 1s.xml  sss.xml  style.css  styles.css
